# Euler3D

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  build.bsh  build_mpi.sh  build_rel.bsh  clang-format-all.bsh  clang-format-check.bsh  compile_commands.json  test.txt
.github/: clang-format-check.bsh
.github/workflows/: clang-format-check.yml  cmake.yml
docs/: doxyfile
docs/example/: ConfigFIle.e3d
examples/: E3D_POST  E3D_PRE  E3D_Solver  PlotResiduals.py  README.md  runall.bsh
examples/ONERA_transsonic/: ONERA_transsonic.bsh  ONERA_transsonic.e3d  naca0012_9x9x5_transsonic.e3d
examples/ONERA_transsonic_125/: ONERA_transsonic_125.bsh  ONERA_transsonic_125.e3d
examples/empty_domain/: StructuredBlock_8.su2  empty_domain.bsh  empty_domain.e3d
examples/naca0012_129x129x2_transsonic_125/: naca0012_129x129x2_transsonic_125.bsh  naca0012_129x129x2_transsonic_125.e3d
examples/naca0012_129x129x2_transsonic_125/output/: part0.par  part1.par  part2.par  part3.par  part4.par  part5.par  postlog.txt  prelog.txt
examples/naca0012_9x9x5_subsonic/: naca0012_9x9x5_subsonic.bsh  naca0012_9x9x5_subsonic.e3d
examples/naca0012_9x9x5_subsonic_125/: naca0012_9x9x5_subsonic_125.bsh  naca0012_9x9x5_subsonic_125.e3d
examples/naca0012_9x9x5_supersonic/: naca0012_9x9x5_supersonic.bsh  naca0012_9x9x5_supersonic.e3d
examples/naca0012_9x9x5_supersonic_125/: naca0012_9x9x5_supersonic_125.bsh  naca0012_9x9x5_supersonic_125.e3d  naca0012_euler_9x9x5_O_1B.su2
examples/naca0012_9x9x5_transsonic/: naca0012_9x9x5_transsonic.bsh  naca0012_9x9x5_transsonic.e3d
examples/naca0012_9x9x5_transsonic_000/: naca0012_9x9x5_transsonic_000.bsh  naca0012_9x9x5_transsonic_000.e3d
examples/naca0012_9x9x5_transsonic_125/: naca0012_9x9x5_transsonic_125.bsh  naca0012_9x9x5_transsonic_125.e3d
include/: Partition.hpp  SU2MeshParser.hpp
include/connectivity/: Connectivity.hpp
include/mesh/: Mesh.hpp  Metrics.hpp
include/parallelization/: MPIHandler.hpp
include/parser/: BoundaryPost.hpp  ConfigParser.h  Element.hpp  GhostCell.hpp  MeshPartition.hpp  SU2MeshParser.hpp  SU2PartitionParser.hpp  SimConfig.hpp  SolutionPost.hpp
include/partition/: Partition.hpp  PhysicalBCPartition.hpp  SU2Writer.hpp  StackSet.hpp
include/post/: post.hpp
include/solver/: AeroCoefficients.hpp  ConservativeVar.hpp  ConvectiveFluxesSchemes.h  EulerSolver.hpp  FarfieldBC.h  FlowField.hpp  PhysicalBC.h  Problem.hpp  ResidualVar.hpp  Residuals.hpp  ResidualsFile.hpp  RoeScheme.hpp  SolverLoop.hpp  TimeIntegration.h  UpdateBC.hpp  W.hpp  WriteSolution.hpp
include/solver/sgs/: cal_Q.h  cal_RHS.h  cal_for_lusgs.h  eigenValues.h  utils.h  yacobi_A.h
include/utils/: Logger.hpp  ProgressBar.hpp  SolverPrint.hpp  Vector3.h
src/: CMakeLists.txt  Solver.cpp  main.cpp  postprocessor.cpp  preprocessor.cpp  solChoice.cpp  solChoice.hpp  tec3DWriter.cpp  tec3DWriter.hpp
src/Connectivity/: CMakeLists.txt  Connectivity.hpp  Exemple2.cpp  exemple.cpp
src/connectivity/: CMakeLists.txt  Connectivity.cpp  Connectivity.hpp  exemple.cpp
src/gui/: EES3D.py
src/mesh/: CMakeLists.txt  Mesh.cpp  Metrics.cpp
src/parallelization/: CMakeLists.txt  MPIHandler.cpp
src/parser/: BoundaryPost.cpp  CMakeLists.txt  MeshPartition.cpp  SU2MeshParser.cpp  SU2PartitionParser.cpp  SimConfig.cpp  SolutionPost.cpp
src/partition/: CMakeLists.txt  Partition.cpp  PhysicalBCPartition.cpp  SU2Writer.cpp
src/post/: CMakeLists.txt  ONERA.py  ONERA_EXP.data  post.cpp  solutionGenerator.py
src/solver/: AeroCoefficients.cpp  CMakeLists.txt  ConvectiveFluxesSchemes.cpp  EulerSolver.cpp  FarfieldBC.cpp  FlowField.cpp  PhysicalBC.cpp  Problem.cpp  SolverLoop.cpp  TimeIntegration.cpp  UpdateBC.cpp  WriteSolution.cpp
src/solver/sgs/: CMakeLists.txt  bound.cpp  bound.h  cal_Q.cpp  cal_Q.h  cal_RHS.cpp  cal_RHS.h  cal_for_lusgs.cpp  cal_for_lusgs.h  eigenValues.cpp  eigenValues.h  fvs.cpp  fvs.h  inner_ite.cpp  inner_ite.h  muscl.cpp  muscl.h  parameters.cpp  parameters.h  setup.cpp  setup.h  utils.cpp  utils.h  yacobi_A.cpp  yacobi_A.h
src/testcode/: solChoice.cpp  solChoice.hpp  tec3DWriter.cpp  tec3DWriter.hpp
src/utils/: CMakeLists.txt  Logger.cpp  ProgressBar.cpp
test/: CMakeLists.txt  CatchMain.cpp  Test_Catch.cpp  Test_Connectivity.cpp  Test_Element.cpp  Test_Parser.cpp  Test_Partition.cpp  Test_PhysicalBCPartition.cpp  Test_SU2Mesh.cpp  Test_SU2Writer.cpp  Test_StackSet.cpp
test/ConfigFiles/: ConfigFIle_test.e3d  ConfigFIle_test_meshPartition.e3d
test/mesh/: StructuredBlock_8_p0.par  StructuredBlock_8_p0.par.sol  StructuredBlock_8_p1.par  StructuredBlock_8_p2.par  StructuredBlock_8_p3.par  naca0012_9x9x5_unittest_mesh.su2  stackedCubes.su2  stackedTetrahedron.su2
test/post/: StructuredBlock_8.su2  StructuredBlock_8_p0.par  StructuredBlock_8_p1.par  StructuredBlock_8_p1.sol  StructuredBlock_8_p2.par  StructuredBlock_8_p3.par  StructuredBlock_8_p3.sol
test/solver/flowfield/: StructuredBlock_8_p0.par  StructuredBlock_8_p0.par.sol  StructuredBlock_8_p1.par  config.e3d
test/solver/flowfield/Output/: postlog.txt
