
add_library(Post post.cpp)
find_path(
    TECIO_INCLUDE_DIR
    NAMES "TECIO.h"
    HINTS "/usr/local/tecplot/360ex_2019r1/include"
)
TARGET_INCLUDE_DIRECTORIES(Post PUBLIC ${PROJECT_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(Post PUBLIC ${PROJECT_SOURCE_DIR}/extern ${TECIO_INCLUDE_DIR})

TARGET_COMPILE_OPTIONS(Post PUBLIC "$<$<CONFIG:DEBUG>:${debug_flags}>" )
TARGET_COMPILE_OPTIONS(Post PUBLIC "$<$<CONFIG:RELEASE>:${release_flags}>" )
